# esp32-8048S050C

main/: CMakeLists.txt  audio_player_ui.cpp  audio_player_ui.h  button_config_ui.cpp  file_manager_ui.cpp  file_manager_ui.h  main.c  sunton_esp32_8048s050c.c  sunton_esp32_8048s050c.h  wifi_config_ui.cpp  wifi_config_ui.h
